<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>freenove_car_bringup</name>
  <version>0.1.0</version>
  <description>Launch and configuration files for Freenove 4WD Smart Car</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>freenove_car_core</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
