<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsl" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>freenove_car_core</name>
  <version>0.1.0</version>
  <description>Core hardware drivers and ROS 2 nodes for Freenove 4WD Smart Car</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>freenove_car_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
